--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ At The Global Solutions, we are committed to delivering exceptional results and 
        
         </section>
         <!-- Contact-->
-        <section class="contact-section bg-black">
+        <section id="signup" class="contact-section bg-black">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5">
                     
