--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Furthermore, we offer sales boost services that will supercharge your revenue gr
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Technical Issues, Amazon Selling Support and Digital Marketing</h4>
+                                    <h4 class="text-white">Technical Issues, Amazon Selling Support, Digital Marketing Business Coaching and Crypto Coaching</h4>
                                     <p class="mb-0 text-white-50">Technical glitches can be a major roadblock for any business, which is why our technical support services are designed to keep your operations running smoothly. Our experienced technicians are adept at troubleshooting a wide range of technical issues, providing quick and effective solutions that minimize downtime and maximize productivity.
 
 If you're looking to expand your business on Amazon, our Amazon selling support services are here to assist you every step of the way. From product listing optimization and inventory management to PPC advertising and brand protection, we'll help you navigate the complexities of the Amazon marketplace and achieve sustainable growth.</p>
